--- a/智能识别.md
+++ b/智能识别.md
@@ -26,3 +26,11 @@
 
 新建项目，把Emgu CV说道的那两个项目合并一下 然后在调用百度的API 基本上就可以了
 
+
+
+
+
+项目代码 是用Nuget 来安装 Emgn CV 跟ZedGraph 的，为了上传到github 上面，所以删除了这个packages
+
+![](img/3.png)
+
